<resources>
    <string name="app_name" translatable="false">Morse-con</string>
    <string name="description">Morse code converter</string>
    <string name="output">Output: </string>
    <string name="morse">Morse code</string>
    <string name="input">Input: </string>
    <string name="text">Plain text</string>
    <string name="convert">Convert</string>
    <string name="switch_mode">Switch</string>
    <string name="settings">Settings</string>
    <string name="copy">Copy</string>
    <string name="clear">Clear</string>
    <string name="font_size">Font size:</string>
    <string name="theme">Theme</string>
</resources>