<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/description" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:textSize="15sp"
        android:text="@string/output" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/output_result"
            android:layout_width="284dp"
            android:layout_height="match_parent"
            android:hint="@string/morse"
            android:textColorHint="#8D6E63"
            android:textIsSelectable="true"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/copy_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/copy"
            app:srcCompat="?attr/actionModeCopyDrawable" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/settings_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <ImageButton
            android:id="@+id/switch_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/switch_mode"
            app:srcCompat="@android:drawable/stat_notify_sync" />

        <ImageButton
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_notification_clear_all"
            android:contentDescription="@string/clear" />

    </LinearLayout>

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:textSize="15sp"
        android:text="@string/input" />

    <MultiAutoCompleteTextView
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:textSize="15sp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/convert"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/font_size" />

    <SeekBar
        android:id="@+id/font_size_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Switch
        android:id="@+id/theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:minHeight="48dp"
        android:text="@string/theme"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />


</LinearLayout>